v2.0 - finalizing updates.